cabal-version:       2.4

name:                Foundation
version:             0.1.0.0
synopsis:            Bytecode-interpreted language written in Haskell.
description:         Bytecode-interpreted language written in Haskell.
homepage:            https://github.com/PureFunctor/Foundation
bug-reports:         https://github.com/PureFunctor/Foundation/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              PureFunctor
maintainer:          purefunctor@gmail.com
copyright:           (c) 2020, PureFunctor
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Language.Foundation
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite Foundation-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Foundation.hs
  build-depends:       base ^>=4.13.0.0
